# NotSoHardwareTextEditor

./: .gitignore  Cargo.toml  FontBytes.txt  README.md
src/: config.rs  cursor.rs  font.rs  lib.rs  main.rs  memory.rs  typewriter.rs
