[package]
name = "typewriter"
version = "0.1.0"
edition = "2021"

# This is pretty ugly. But my code works with intentional overflows.
[profile.dev]
overflow-checks = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
